--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "typescript-backend",
   "version": "1.0.0",
   "description": "Backend build in Typescript",
-  "main": "dist/main.js",
+  "main": "dist/index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "node dist/index.js",
-    "start:dev": "nodemon dist/index.js"
+    "start": "nodemon dist/index.js"
   },
   "keywords": [
     "Typescript",
@@ -16,10 +16,15 @@
   "author": "Rajendra Patel",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.28",
     "nodemon": "^3.1.0",
+    "prettier": "^3.2.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
   },
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3"
   }
 }
